[package]
name = "huskarl-google-cloud"
version = "0.7.0"
edition = "2024"
description = "Google Cloud support for huskarl (OAuth2 client) ecosystem."
repository = "https://github.com/huskarl-rs/huskarl-google-cloud"
license = "MIT OR Apache-2.0"
keywords = ["oauth2", "security", "authentication", "gcp", "google"]
categories = ["authentication"]
readme = "README.md"
documentation = "https://docs.rs/huskarl-google-cloud"

[package.metadata.docs.rs]
# Render the `_docs` module and enable `doc_cfg` feature badges.
# `cargo docs-rs` reads this block too.
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["kms", "secretmanager"]
kms = ["dep:google-cloud-kms-v1", "dep:p256", "dep:p384", "dep:der", "dep:pem-rfc7468", "dep:spki", "dep:futures-util"]
secretmanager = ["dep:google-cloud-secretmanager-v1", "dep:futures-util"]

[dependencies]
huskarl-core = { version = "0.9", default-features = false }

bon = { version = "3", default-features = false }
google-cloud-kms-v1 = { version = "1.4", optional = true, default-features = false }
google-cloud-secretmanager-v1 = { version = "1.4", optional = true, default-features = false }
der = { version = "0.8", optional = true, default-features = false, features = ["derive"] }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }
p256 = { version = "0.14", optional = true, default-features = false, features = ["ecdsa", "pem"] }
p384 = { version = "0.14", optional = true, default-features = false, features = ["ecdsa", "pem"] }
pem-rfc7468 = { version = "1", optional = true, default-features = false }
snafu = { version = "0.9", default-features = false, features = ["std", "rust_1_81"] }
spki = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
google-cloud-gax = { version = "1", default-features = false }
google-cloud-wkt = { version = "1", default-features = false }
# Local in-memory key types (AesGcmKey, SymmetricKey), used to prove the
# multi-version secret sources compose into cipher/verifier constructs with a
# kid derived from the secret version.
huskarl-crypto-native = { version = "0.10", default-features = false }
